Updated to support increasable max processes

--- a/templates/etc.php-fpm.conf.j2
+++ b/templates/etc.php-fpm.conf.j2
@@ -9,5 +9,5 @@ log_level = notice
 emergency_restart_threshold = 0
 emergency_restart_interval = 0
 process_control_timeout = 0
-process.max = 128
+process.max = {{ php_fpm_process_max }}
 daemonize = yes
