fix stupid bug when using phpfpm env vars

--- a/templates/etc.php-fpm.d.sites.conf.j2
+++ b/templates/etc.php-fpm.d.sites.conf.j2
@@ -32,7 +32,7 @@ php_flag[{{ php_flag.setting }}] = {{ php_flag.value }}
 {% endfor %}
 
 {% for env_var in site.env_vars|default([]) %}
-env[{{ env_var.var }}] = {{ env_value.value }}
+env[{{ env_var.var }}] = {{ env_var.value }}
 {% endfor %}
 
 {% endfor %}
